--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pl.edu.agh.pockettrainer">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -25,6 +25,7 @@
 
         <activity android:name=".ui.activities.HomeActivity" />
         <activity android:name=".ui.activities.ProgramBrowserActivity" />
+        <activity android:name=".ui.activities.ProgramDetailsActivity"></activity>
     </application>
 
 </manifest>
