--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".ui.activities.HomeActivity" />
+        <activity android:name=".ui.activities.TodayNoneActivity" />
         <activity android:name=".ui.activities.ProgramBrowserActivity" />
         <activity android:name=".ui.activities.ProgramDetailsActivity"
                   android:parentActivityName=".ui.activities.ProgramBrowserActivity"/>
