--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,10 @@
         <activity
             android:name=".ui.activities.ProgramDetailsActivity"
             android:parentActivityName=".ui.activities.ProgramBrowserActivity" />
-        <activity android:name=".ui.activities.TodaySomeActivity"></activity>
+        <activity android:name=".ui.activities.TodayFinishedActivity" />
+        <activity android:name=".ui.activities.TodayRecoveryActivity" />
+        <activity android:name=".ui.activities.TodayNewActivity" />
+        <activity android:name=".ui.activities.TodayReadyActivity"></activity>
     </application>
 
 </manifest>
