--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,32 +11,34 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light">
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
+
         <activity
             android:name=".ui.activities.SplashScreenActivity"
             android:noHistory="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
-
         <activity android:name=".ui.activities.TodayNoneActivity" />
         <activity android:name=".ui.activities.ProgramBrowserActivity" />
-        <activity
-            android:name=".ui.activities.ProgramDetailsActivity"
-            android:parentActivityName=".ui.activities.ProgramBrowserActivity" />
+        <activity android:name=".ui.activities.ProgramDetailsActivity"
+                  android:parentActivityName=".ui.activities.ProgramBrowserActivity" />
         <activity android:name=".ui.activities.TodayFinishedActivity" />
         <activity android:name=".ui.activities.TodayRecoveryActivity" />
         <activity android:name=".ui.activities.TodayNewActivity" />
         <activity android:name=".ui.activities.TodayReadyActivity" />
         <activity android:name=".ui.activities.UpcomingActivity" />
-        <activity android:name=".ui.activities.TodayBelatedActivity"></activity>
+        <activity android:name=".ui.activities.TodayBelatedActivity" />
+        <activity android:name=".ui.activities.CountdownActivity"
+                  android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+                  android:noHistory="true" />
     </application>
 
 </manifest>
