--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".ui.ApplicationState"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -28,17 +29,22 @@
 
         <activity android:name=".ui.activities.TodayNoneActivity" />
         <activity android:name=".ui.activities.ProgramBrowserActivity" />
-        <activity android:name=".ui.activities.ProgramDetailsActivity"
-                  android:parentActivityName=".ui.activities.ProgramBrowserActivity" />
+        <activity
+            android:name=".ui.activities.ProgramDetailsActivity"
+            android:parentActivityName=".ui.activities.ProgramBrowserActivity" />
         <activity android:name=".ui.activities.TodayFinishedActivity" />
         <activity android:name=".ui.activities.TodayRecoveryActivity" />
         <activity android:name=".ui.activities.TodayNewActivity" />
         <activity android:name=".ui.activities.TodayReadyActivity" />
         <activity android:name=".ui.activities.UpcomingActivity" />
         <activity android:name=".ui.activities.TodayBelatedActivity" />
-        <activity android:name=".ui.activities.CountdownActivity"
-                  android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-                  android:noHistory="true" />
+        <activity
+            android:name=".ui.activities.CountdownActivity"
+            android:noHistory="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".ui.activities.TimedActionActivity"
+                  android:noHistory="true"
+                  android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
 
 </manifest>
