--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="pl.edu.agh.pockettrainer">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".ui.ApplicationState"
@@ -64,7 +64,8 @@
             android:name=".ui.activities.RecoveryActionActivity"
             android:noHistory="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".ui.activities.HistoryActivity"></activity>
+        <activity android:name=".ui.activities.HistoryActivity" />
+        <activity android:name=".ui.activities.SettingsActivity"></activity>
     </application>
 
 </manifest>
