--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".ui.ApplicationState"
@@ -66,7 +66,9 @@
             android:noHistory="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".ui.activities.HistoryActivity" />
-        <activity android:name=".ui.activities.SettingsActivity"/>
+        <activity android:name=".ui.activities.SettingsActivity" />
+        <activity android:name=".ui.activities.DownloadActivity"
+                  android:parentActivityName=".ui.activities.ProgramBrowserActivity"/>
     </application>
 
 </manifest>
